--- a/.travis.yml
+++ b/.travis.yml
@@ -4,3 +4,11 @@ rust:
   - stable
   - beta
   - nightly
+jobs:
+  allow_failures:
+    - rust: nightly
+script:
+  - cargo fmt --verbose --all -- --check --verbose
+  - cargo clippy --verbose --all -- --verbose
+  - cargo build --verbose --all
+  - cargo test --verbose --all
